--- a/voting_project/templates/base.html
+++ b/voting_project/templates/base.html
@@ -43,7 +43,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Siemens Group CFP</a>
+          <a class="navbar-brand" href="#">Momentum Tracker</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
