clarified utc time

--- a/voting_project/templates/view.html
+++ b/voting_project/templates/view.html
@@ -7,7 +7,7 @@
     <p>
         Press play to view the momentum results of the discussion on {{discussion}}. 
     </p><p>
-        The first recorded vote is at {{ start_time }}, and the fade time used is {{ fade_time }} seconds.
+        The first recorded vote is at {{ start_time }} UTC time, and the fade time used is {{ fade_time }} seconds.
     </p>
     <!--<ul>
         {% for vote in votes %}
