agree/disagree to arrows

--- a/voting_project/templates/home.html
+++ b/voting_project/templates/home.html
@@ -20,8 +20,8 @@
 </div>
 <div class="row">
 <div class="vote-buttons col-xs-12 col-md-8 col-lg-7">
-  <button type="button" class="btn btn-primary btn-lg btn-block" id="btn-up">Agree</button>
-  <button type="button" class="btn btn-danger btn-lg btn-block" id="btn-down">Disagree</button>
+  <button type="button" class="btn btn-primary btn-lg btn-block" id="btn-up"><img src="/static/up_arrow.png" alt="Up"></img></button>
+  <button type="button" class="btn btn-danger btn-lg btn-block" id="btn-down"><img src="/static/down_arrow.png" alt="Down"></img></button>
 </div>
 </div>
 {% endblock %}
