--- a/voting_project/static/home.css
+++ b/voting_project/static/home.css
@@ -10,6 +10,9 @@ body {
 	font-size: 40pt;
 }
 
+.vote-buttons button img {
+    width: 100px;
+}
 .selects .bootstrap-select {
 	margin-top: 8px;
 	margin-left: 10px;
