smarter plot rendering, page renaming, about section

--- a/voting_project/templates/about.html
+++ b/voting_project/templates/about.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
-<h3>Binary voting experiment</h3>
+<h3>Momentum: A Live Feedback Tool</h3>
 <p>
-Enter explanation text here.
+This tool is used to provide real-time insignt into meetings and presentations through 
+a simple up/down voting mechanism. 
+
+First, participants and a discussion are defined in the administration panel of the tool. Then, while listening to a presentation or discussion, participants vote as often as they like to indicate their feelings toward the current content. Depending on the use case, votes may indicate like/dislike, agree/disagree, or important/not important. The collected data is saved in a database and used to create various visualizations which provide a number of valuable insights.
 </p>
 {% endblock %}
