--- a/voting_project/templates/home.html
+++ b/voting_project/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h3>Binary voting experiment</h3>
+<h3>Momentum: A Live Feedback Tool</h3>
 
 <div class='selects row'>
   <select class="selectpicker show-tick show-menu-arrow col-xs-5 col-md-3" 
