--- a/voting_project/templates/view_home.html
+++ b/voting_project/templates/view_home.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h3>View data</h3>
+    <h3>View Results</h3>
     <p>
-        Click a discussion to view data for it.
+        Choose a discussion to see the results:
     </p>
     <ul>
           {% for discussion in discussions %}
