--- a/voting_project/templates/base.html
+++ b/voting_project/templates/base.html
@@ -29,6 +29,7 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+    <script src="/static/underscore-min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
     <script src="/static/bootstrap-select.min.js"></script>
@@ -43,7 +44,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Momentum Tracker</a>
+          <a class="navbar-brand" href="/">Momentum</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
