--- a/voting_project/templates/view.html
+++ b/voting_project/templates/view.html
@@ -121,7 +121,7 @@
       }, FRAMETIME * 1000);
       */
 
-      pan_amount = (plot_width + 10)/(time_window) * FRAMETIME;
+      pan_amount = (plot_width + 10)/(time_window) * FRAMETIME * 1.009;
 
       setInterval(function plotPan() {
         if (!playing) return;
